recursion.lessons.recursion.tree.Tree.scala.error
Tree:16: error: Boolean does not take parameters
			gauche(angle)
                              ^Tree:18: error: Boolean does not take parameters
			gauche(2*angle)
                              ^