recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {

	var longueur = length
	var etage = steps
	var gauche = false

	
			current(steps)

			avance(length)
			droite(angle)

			tree(etage,longueur,angle,shrink)

			gauche(angle)
			recule(length)
			gauche(2*angle)

			tree(etage,longueur,angle,shrink)

			longueur = longueur * shrink
			etage -= 1
			
}
